torchlite-backend/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torchlite-backend-dev-deployment
spec:
  selector:
    matchLabels:
      app: torchlite-backend-dev-app
  replicas: 2
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: torchlite-backend-dev-app
    spec:
      volumes:
        - name: registry-cert
          secret:
            secretName: registryapi-dev-cert
            items:
              - key: tls.crt
                path: crt
              - key: tls.key
                path: key
      containers:
        - name: torchlite-backend-dev
          image: ghcr.io/htrc/torchlite-backend:dependabot-pip-cryptography-50.0.0-e6aabf9
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: registry-cert
              mountPath: "/etc/credentials"
              readOnly: true
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 3
      imagePullSecrets:
        - name: dockerconfigjson-github-com
