torchlite-backend/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: torchlite-backend-dev-service
spec:
  selector:
    app: torchlite-backend-dev-app
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
